--- a/Project_Calculator/Makefile
+++ b/Project_Calculator/Makefile
@@ -1,16 +1,15 @@
 # Compiler and flags
 CXX = g++
-CXXFLAGS = -std=c++20 -O2
-LATEX = xelatex
+CXXFLAGS = -std=c++20 -O2 -Wall -Wextra
 
 # Source and header files
-SRC = test.cpp
-HDR = BST.h
-# Output executable
-EXEC = test
+SRC = main.cpp
+HDR = expression_evaluator.h
+EXEC = main
 
 # LaTeX report
 REPORT = report.tex
+PDF = $(REPORT:.tex=.pdf)
 
 # Default target
 all: $(EXEC)
@@ -19,18 +18,20 @@ all: $(EXEC)
 $(EXEC): $(SRC) $(HDR)
 	$(CXX) $(CXXFLAGS) $(SRC) -o $(EXEC)
 
-# Run the program and output results to a file
+# Run the program
 run: $(EXEC)
 	./$(EXEC)
 
 # Generate the LaTeX report
-report:
-	$(LATEX) $(REPORT)
-	$(LATEX) $(REPORT)  # Run twice for cross-references
+report: $(PDF)
+
+$(PDF): $(REPORT)
+	xelatex $<
+	xelatex $<  # Run twice for cross-references
 
 # Clean up generated files
 clean:
-	rm -f $(EXEC) *.aux *.log *.out *.pdf output.txt
+	rm -f $(EXEC) *.aux *.log *.out $(PDF)
 
 # Phony targets
 .PHONY: all run report clean
